@@ -99,6 +99,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - x2goclient.pro{,.maemo}: reference new pulsemanager.{cpp,h} files.
     - macbuild.sh: add new MACPORTS_PREFIX detection/variable.
     - macbuild.sh: add new dependency_error() helper function.
+    - macbuild.sh: add new lazy_canonical_path() helper function.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
